# KAZAN

./: .dockerignore  .gitignore  README.md  check_migrations.sh  dockerfile  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  startscript.sh
blog/: admin.py  docker_views.py  models.py  sitemaps.py  upload_paths.py  urls.py  utils.py  views.py
blog/management/commands/: fix_markdown_image_paths.py  generate_fake_posts.py  publish_post.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_content_markdown_and_more.py  0003_alter_blogpost_content_markdown_postview.py  0004_aboutpage_aboutpageimage.py  0005_alter_postview_unique_together.py  0006_blogpost_is_moderated.py  0007_alter_postview_options_alter_postimage_image.py  0008_alter_blogpost_cover_image.py  0009_alter_blogpost_meta_description.py
blog/static/blog/css/: markdownx-horizontal.css
blog/templates/blog/: about_page.html  best_posts.html  location_detail.html  location_root.html  popular_posts.html  post_detail.html  post_list.html  tag_detail.html  tag_list.html
blog/templates/blog/partials/: pagination.html  post_card.html  post_rating.html
kazan/: asgi.py  settings.py  urls.py  wsgi.py
static_src/css/: input.css  output.css
templates/: 404.html  base.html
templates/verification/: yandex_c9d84c93bcab45a5.html
